Fix menu z-index, remove releases from homepage

--- a/src/components/Navigation/navigation.scss
+++ b/src/components/Navigation/navigation.scss
@@ -7,6 +7,7 @@
   font-weight: 700;
   display: flex;
   justify-content: center;
+  z-index: 70;
 
   .menu{
     display: flex;
